# CG

./: CMakeLists.txt  README.md  README_RUN.md  compile_shaders.sh  imgui.ini  run.sh
include/: camera.h  cylinder_generator.h  math_utils.h  sphere_generator.h  vertex.h
shaders/: frag.glsl  frag.spv  shadow.vert  shadow_frag.glsl  shadow_vert.glsl  shadow_vert.spv  vert.glsl  vert.spv
src/: camera.cpp  cylinder_generator.cpp  main.cpp  math_utils.cpp  sphere_generator.cpp
src/veekay/: veekay.cpp
